<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:background="@drawable/bg_dialog_hit"
    android:paddingTop="10dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/dialog_hit"
        android:textColor="@color/textColor"
        android:textSize="@dimen/font_large" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/gray_999"
        android:textSize="@dimen/font_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/ghostWhite"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="@dimen/font_small"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/dialog_cancel"
            android:textColor="@color/textColor" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvOk"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/userTopBg"
            android:gravity="center"
            android:foreground="?attr/selectableItemBackground"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/dialog_ok"
            android:textSize="@dimen/font_small"
            android:textColor="@color/textColor" />
    </LinearLayout>


</LinearLayout>