<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/userTopBg"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <RelativeLayout
                android:id="@+id/rlBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="14dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_title_back2" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/task_title"
                android:textColor="@color/white"
                android:textSize="@dimen/font_normal" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/userTopBg">

        <RelativeLayout
            android:id="@+id/rl_day_task"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/task_tip"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view_day_task"
                android:layout_width="40dp"
                android:layout_height="3dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_more_task"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/more_task"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view_more_task"
                android:visibility="gone"
                android:layout_width="40dp"
                android:layout_height="3dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/white" />
        </RelativeLayout>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTask"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="#F5F5F5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never" />

</LinearLayout>